--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net461" />
+  <package id="MahApps.Metro.IconPacks" version="1.9.0" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net461" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net461" />
