Added dialog service

--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -82,6 +82,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Infrastructure\DialogService.cs" />
     <Compile Include="View\ThemeManagerHelper.cs" />
     <Page Include="View\AccentStyleWindow.xaml">
       <SubType>Designer</SubType>
